--- a/package.json
+++ b/package.json
@@ -73,7 +73,7 @@
 		"prettier": "^2.3.2",
 		"pretty-quick": "^3.1.1",
 		"rimraf": "^3.0.2",
-		"typescript": "^4.3.5"
+		"typescript": "^4.4.0-dev.20210806"
 	},
 	"dependencies": {
 		"cross-fetch": "^3.1.4",
