feat: add Smlouvy

--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
 		"guard",
 		"cz"
 	],
-	"author": "Vlad Frangu <vladfrangu@tbd>",
+	"author": "Vlad Frangu <kingdgrizzle@gmail.com>",
 	"license": "Apache-2.0",
 	"bugs": {
 		"url": "https://github.com/vladfrangu/hlidacstatu-client/issues"
